force-app/main/default/objects/Application_Window_Template__c/Application_Window_Template__c.object-meta.xml
<CustomObject>
    <label>Application Window Template</label>
    <nameField>
        <displayFormat>AWT-{0}</displayFormat>
        <label>Iteration Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Window Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>