force-app/main/default/objects/Application_Window_Template__c/fields/Application_Window__c.field-meta.xml
<CustomField>
    <fullName>Application_Window__c</fullName>
    <label>Application Window</label>
    <referenceTo>Application_Window__c</referenceTo>
    <relationshipLabel>Application Window Templates</relationshipLabel>
    <relationshipName>Application_Window_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>