force-app/main/default/objects/Application_Window_Template__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will define which template is active and will display on the page.</description>
    <inlineHelpText>This will define which template is active and will display on the page.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>