force-app/main/default/objects/Application_Window_Template__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <formula>Application_Window__r.Theme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme</label>
    <type>Text</type>
</CustomField>