force-app/main/default/objects/Application_Window_Template__c/fields/Window_Description__c.field-meta.xml
<CustomField>
    <fullName>Window_Description__c</fullName>
    <label>Window Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>